--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git y Githubt</title>
 </head>
 <body>
+    <header>
+        <h1>Git y Github</h1>
+    </header>
+
+    <main>
+
+    </main>
     
+    <footer>
+
+    </footer>
 </body>
 </html>
