Creacion de etiqueta main y footer
Hemos creado la etiqueta main y footer, en la main hemos añadido un parrafo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     </header>
 
     <main>
-
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta possimus maiores reprehenderit sunt voluptatibus consequuntur praesentium officia impedit maxime quia error ab illum minima repellendus, cum nulla officiis dicta eius.
+        Suscipit quia assumenda modi blanditiis perspiciatis corrupti ex expedita inventore sint, velit consequuntur praesentium dignissimos nihil saepe ullam eveniet reiciendis deleniti nulla tenetur laborum cum perferendis ut. Doloremque, quaerat porro.
+        Sunt nobis eos cum similique error temporibus praesentium voluptatem expedita, facere saepe? Itaque cumque blanditiis eum? Quae sit ut laboriosam ducimus labore dolores ullam voluptatibus facilis ipsam aliquam. Quaerat, est.</p>
     </main>
     
     <footer>
